# src/indexer-sdk/model/index.ts
@@ -34,6 +34,8 @@ export * from './appControllerGetMicroblockStatsParams';
 export * from './appControllerGetMicroblockStatsVbType';
 export * from './appControllerGetNodeRewardParams';
 export * from './appControllerGetNodeStatusParams';
+export * from './appControllerGetOrganizationCertificatesOrder';
+export * from './appControllerGetOrganizationCertificatesParams';
 export * from './appControllerGetOrganizationsOrder';
 export * from './appControllerGetOrganizationsParams';
 export * from './appControllerGetValidatorNodesOrder';
@@ -70,6 +72,8 @@ export * from './nodeRewardResponseDto';
 export * from './nodeStatusResponseDto';
 export * from './nodeStatusResponseDtoStatus';
 export * from './objectCountDto';
+export * from './organizationCertificateDto';
+export * from './organizationCertificateListResponseDto';
 export * from './organizationDto';
 export * from './organizationListResponseDto';
 export * from './proofBlockDto';
